feat: implements custom screener queries
